--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
-html,
-body {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+.errmsg {
+  color: red;
+}
+
+.offscreen {
+  display: none;
 }
